--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "YuliaBeliak",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^16.1.7",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongodb": "^3.3.4",
