--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hapi/joi": "^16.1.7",
     "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.4",
